--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 img{
 	max-width: 100%;
+	height: 90%;
   	display: inline-block;
 }
 
@@ -48,8 +49,15 @@ img{
 	background-image: url(IMG/te.jpg);
 }
 
-
 ::-webkit-scrollbar {
     display: none;
+}
+
+@media only screen and (hover: none) and (pointer: coarse) {
+	img{
+		max-width: 100%;
+		height: min-content;
+		display: inline-block;
+	}
 }
  
