--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ img{
 @media only screen and (hover: none) and (pointer: coarse) {
 	img{
 		max-width: 100%;
-		height: min-content;
+		height: max-content;
 		display: inline-block;
 	}
 }
